# dev-purge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dev-purge.sh  install.sh  justfile
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/src/: app.rs  core.rs  lib.rs  main.rs  types.rs
rust/src/cli/: mod.rs
rust/src/domain/: config.rs  delete.rs  docker.rs  impls.rs  mod.rs  os.rs  patterns.rs  reduce.rs  safety.rs  scan.rs  size.rs  traits.rs
rust/src/domain/integrations/docker/: mod.rs
rust/src/domain/os/: linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
rust/src/domain/os/unix/: mod.rs
rust/src/domain/os/unix/linux/: mod.rs
rust/src/domain/os/unix/mac/: mod.rs
rust/src/domain/os/windows/: mod.rs
rust/src/ui/: preview.rs
rust/tests/: integration_tests.rs
src/: app.rs  cli.rs  main.rs  types.rs
src/domain/: config.rs  delete.rs  mod.rs  safety.rs  scan.rs  size.rs
src/ui/: confirm.rs  mod.rs  preview.rs
zig/: build.zig
zig/src/: main.zig
zig/src/domain/: cleaner.zig  config.zig  os.zig  safety.zig  scanner.zig
