[package]
name = "dev-purge"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Scan and delete common developer build artifacts (target/, node_modules/, __pycache__/...)"
repository = "https://github.com/Mwangi-Derrick/dev-purge"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
rayon = "1"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
