[package]
name = "dev-purge"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
description = "Scan and delete common developer build artifacts (target/, node_modules/, __pycache__/...)"
repository = "https://github.com/Mwangi-Derrick/dev-purge"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
rayon = "1"
walkdir = "2"
trash = "5"
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
indicatif = "0.18.4"

[profile.release]
opt-level = 3
lto = true
strip = true

[dev-dependencies]
assert_fs = "1.1.3"
tempfile = "3.27.0"
